--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
+		"axios": "^1.7.9",
 		"request": "^2.88.2",
 		"stremio-addon-sdk": "^1.6.2"
 	}
