--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node addon.js"
   },
   "engines": {
-    "node": "12.x"
+    "node": "23.6.0"
   },
   "dependencies": {
     "axios": "^1.7.9",
