--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "start": "node addon.js"
   },
   "engines": {
-    "node": "15.x"
+    "node": ">=15.x"
   },
   "dependencies": {
-    "axios": "^1.7.9",
+    "axios": "^1.9.0",
+    "body-parser": "^2.2.0",
+    "express": "^5.1.0",
+    "express-session": "^1.18.1",
+    "real-debrid-api": "^1.1.0",
     "request": "^2.88.2",
-    "stremio-addon-sdk": "^0.7.1"
+    "stremio-addon-sdk": "^1.6.10"
   }
 }
